--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,8 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+@import url("https://unpkg.com/leaflet@1.9.3/dist/leaflet.css");
+#map { width: 100%; height: 580px; }
 .attribution { 
   font-size: 11px; 
   text-align: center; 
